# CodeBaseOS

./: .env.example  .gitignore  AGENTS.md  CODEBASEOS_SPEC.md  CODEBASEOS_STATUS.md  DEMO.md  KICKOFF.md  Makefile  README.md  STATUS.md  STRETCH.md  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md  __init__.py  api.py  offline.py
cli/: README.md  __init__.py
dashboard/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AskPanel.tsx  ChaosPanel.tsx  EmptyState.tsx  FilterChips.tsx  ForceGraph.tsx  LeftRail.tsx  Legend.tsx  MerkleBanner.tsx  NodePanel.tsx  RightRail.tsx  SearchBar.tsx  Skeleton.tsx  TimeSlider.tsx  TopBar.tsx  Typewriter.tsx
dashboard/hooks/: useGraphData.ts  useGraphWS.ts
dashboard/lib/: nodeColors.ts
docs/: extension-metadata.md  hydradb-notes.md  status-bar-contract.md
extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: client.ts  extension.ts  statusBar.ts
graph/: README.md  __init__.py  bitemporal.py  chain.py  client.py  merkle.py  resolve.py  schema.py
ingester/: README.md  __init__.py  github.py
provenance/: README.md  __init__.py  example.py
resolver/: README.md
scripts/: README.md  chaos.py  demo_cold_start.sh  mock_graph_server.py
synthesizer/: README.md  __init__.py  synthesizer.py
tests/: README.md  conftest.py  test_chain.py  test_chaos.py  test_offline.py  test_phase1.py  test_provenance.py  test_synthesizer.py
(+4 files in other folders)
