[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebaseos"
version = "0.0.1"
description = "Bi-temporal code provenance system backed by HydraDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "gitpython>=3.1.43",
    "click>=8.1.7",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
cbos = "cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
